# rusty

./: LICENSE  README.md  todo
24daysofrust/: days  todo
24daysofrust/day01_basic/: Cargo.toml
24daysofrust/day02_primal/: Cargo.toml
24daysofrust/day03_csv/: Cargo.toml
24daysofrust/day04_docopt/: Cargo.toml  data.txt  todo
24daysofrust/day05_hyper/: todo
24daysofrust/day06_json/: todo
24daysofrust/day10_project_euler/: Cargo.toml
24daysofrust/day11_linked_list/: Cargo.toml  todo
24daysofrust/day12_aoc_2020/: Cargo.toml  outputs.txt  todo
24daysofrust/day13_sqlite/: Cargo.toml  pict.db  todo
24daysofrust/day14_atcoder/: Cargo.toml
24daysofrust/day15_codeforces/: Cargo.toml
24daysofrust/day16_backatit/: Cargo.toml
24daysofrust/day17_multithreading/: main.rs
24daysofrust/day4_docopt/: command.sh
24daysofrust/day5_hyper/: Cargo.toml
24daysofrust/day6_json/: Cargo.toml  todo
24daysofrust/day7_itertools/: Cargo.toml  todo
24daysofrust/day9_anymap/: Cargo.toml
cli/read/: Cargo.toml
guessing/: Cargo.toml
guessing/src/: hello.rs  main.rs  (+1 more)
io-template/: Cargo.toml
orm/diesel_crud_example/: .gitignore  Cargo.toml  README.md  docker-compose.yaml  sample-orm-test-using-diesel.postman_collection.json
orm/diesel_crud_example/migrations/2023-07-31-182634_create_sample_table/: up.sql
orm/diesel_crud_example/src/: main.rs  models.rs  schema.rs
parenpar/: Cargo.toml  README.md  run-fast.sh  run.sh
pgdb/: commands.txt  docker-compose.yaml  script.py
plaque/: Cargo.toml
song-search/: README.md  build.py  search.py  start-meilsearch.sh
(+59 files in other folders)
